<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/parentlayout"
    android:layout_height="match_parent"
    android:background="@color/backgroundcolor"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.chintugandhwani.netwincompanyassignment.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:padding="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/businesslogobt"
                android:onClick="onclickhandle"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/ic_add_circle_black_36dp"
                />

            <TextView
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bussinesslogotxt"/>

            <android.support.v7.widget.AppCompatEditText
                android:layout_margin="10dp"
                android:maxLines="1"
                android:backgroundTint="@color/white"
                android:textColorHint="@color/white"
                android:drawableLeft="@drawable/ic_business_center_white_24dp"
                android:drawablePadding="20dp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bussinessnametxt"/>

            <android.support.v7.widget.AppCompatEditText
                android:layout_margin="10dp"
                android:maxLines="1"
                android:textColorHint="@color/white"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/ic_location_on_white_24dp"
                android:drawablePadding="20dp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/addresstxt"/>

            <Button
                android:onClick="onclickhandle"
                android:id="@+id/showonmapbt"
                android:background="@android:color/transparent"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:text="@string/showonmaptxt"
                android:drawableLeft="@drawable/ic_map_white_24dp"/>

            <LinearLayout
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"
                    android:text="@string/yestxt"/>

                <CheckBox
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"
                    android:text="@string/notxt"/>

            </LinearLayout>


            <android.support.v7.widget.AppCompatEditText
                android:layout_margin="10dp"
                android:textColorHint="@color/white"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/ic_location_on_white_24dp"
                android:drawablePadding="25dp"
                android:maxLines="1"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:hint="@string/websitetxt"/>

            <android.support.v7.widget.AppCompatEditText
                android:layout_margin="10dp"
                android:textColorHint="@color/white"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/ic_phone_white_24dp"
                android:drawablePadding="25dp"
                android:maxLines="1"
                android:inputType="phone"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contacttxt"/>

            <LinearLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:onClick="onclickhandle"
                    android:id="@+id/opentimebt"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_access_time_white_24dp"
                    android:drawableLeft="@drawable/ic_access_time_white_24dp"
                    android:layout_width="0dp"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"
                    android:text="@string/opentimetxt"
                    />

                <Button
                    android:onClick="onclickhandle"
                    android:id="@+id/closetimebt"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_access_time_white_24dp"
                    android:drawableLeft="@drawable/ic_access_time_white_24dp"
                    android:layout_width="0dp"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"
                    android:text="@string/closetimetxt"
                    />


            </LinearLayout>


            <TextView
                android:layout_margin="10dp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phototxt"/>

            <LinearLayout
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/photobt1"
                    android:layout_gravity="center"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_weight="1"
                    android:onClick="onclickhandle"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_add_circle_black_24dp"
                    />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/photobt2"
                    android:layout_gravity="center"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_weight="1"
                    android:onClick="onclickhandle"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_add_circle_black_24dp"
                    />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/photobt3"
                    android:layout_gravity="center"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_weight="1"
                    android:onClick="onclickhandle"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_add_circle_black_24dp"
                    />

            </LinearLayout>


            <Button
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                style="@style/Widget.AppCompat.Button.Colored"
                android:background="@color/buttoncolor"
                android:text="@string/submittxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />




        </LinearLayout>
    </ScrollView>



</android.support.design.widget.CoordinatorLayout>
